--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,3 +1,3 @@
 # These are supported funding model platforms
-
-github: timlrx
+# Check the official documentation for more information
+# https://help.github.com/en/github/building-a-strong-community/displaying-a-sponsor-button-in-your-repository
