--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gray-matter": "^4.0.2",
     "hast-util-from-html-isomorphic": "^2.0.0",
     "image-size": "1.0.0",
+    "lucide-react": "^0.456.0",
     "next": "15.0.2",
     "next-contentlayer2": "0.5.3",
     "next-themes": "^0.3.0",
@@ -31,6 +32,7 @@
     "postcss": "^8.4.24",
     "react": "rc",
     "react-dom": "rc",
+    "react-snowfall": "^2.1.1",
     "reading-time": "1.5.0",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-citation": "^2.0.0",
@@ -44,6 +46,7 @@
     "remark-github-blockquote-alert": "^1.2.1",
     "remark-math": "^6.0.0",
     "tailwindcss": "^3.4.14",
+    "typed.js": "^2.1.0",
     "unist-util-visit": "^5.0.0"
   },
   "devDependencies": {
